--- a/Controls/AccountsListViewControl.xaml
+++ b/Controls/AccountsListViewControl.xaml
@@ -11,6 +11,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"    
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:toolkit="using:AK.Toolkit.WinUI3"
     mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -20,7 +21,7 @@
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
-            <Setter Property="Height" Value="60"/>
+            <Setter Property="MinHeight" Value="10"/>
             <Setter Property="Padding" Value="0"/>
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             <Setter Property="VerticalContentAlignment" Value="Stretch"/>
@@ -58,7 +59,7 @@
         <Rectangle Grid.Row="1" Grid.ColumnSpan="3" Fill="#eebc3f" Height="2" Margin="5,0,8,0"/>
 
         <ListView x:Name="AccountsListView" Grid.Row="2" Grid.ColumnSpan="3" x:FieldModifier="public" ItemsSource="{Binding ListAccounts}" BorderBrush="Transparent" BorderThickness="1"                              
-                        IsItemClickEnabled="True" SelectionMode="Single" 
+                        IsItemClickEnabled="True" SelectionMode="Single" toolkit:ScrollBarExtensions.KeepVerticalExpanded="{Binding IsScrollBarsExpanded}"
                   ui:ListViewExtensions.Command="{Binding AccountItemClickedCommand}" SizeChanged="ListView_SizeChanged"
                         ItemContainerStyle="{StaticResource HorizontalSwipe}" ScrollViewer.VerticalScrollBarVisibility="Visible"
                         CanReorderItems="False" AllowDrop="false" Margin="0,0,0,0" >
@@ -78,28 +79,28 @@
                                             <ColumnDefinition Width="0.3*"/>
                                             <ColumnDefinition Width="120"/>
                                     </Grid.ColumnDefinitions>
-
+                                        <TextBlock x:Name="proxy" helpers:AncestorSource.AncestorType="ListView" Visibility="Collapsed" />
                                         <Border Grid.Column="0"  Margin="10,0,0,0" VerticalAlignment="Center" >
                                             <RelativePanel>
-                                                <TextBlock Name="txtName" Text="{Binding Name}" FontWeight="Bold" FontSize="18" TextWrapping="Wrap" />
-                                                <TextBlock Name="txtAbout" Text="{Binding About}" TextWrapping="Wrap" RelativePanel.Below="txtName" FontSize="12"/>
+                                                <TextBlock Name="txtName" Text="{Binding Name}" FontWeight="Bold" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" TextWrapping="Wrap" Margin="0,5,0,0"/>
+                                                <TextBlock Name="txtAbout" Text="{Binding About}" TextWrapping="Wrap" RelativePanel.Below="txtName" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="0,0,0,5"/>
                                             </RelativePanel>
                                         </Border>
 
                                         <Border Grid.Column="1"  Margin="0" VerticalAlignment="Center" HorizontalAlignment="Right" >
                                             <RelativePanel>
-                                                <TextBlock Name="txtValue" Text="{Binding TotalValue, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="18" TextWrapping="Wrap" TextAlignment="Right" />
+                                                <TextBlock Name="txtValue" Text="{Binding TotalValue, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" TextWrapping="Wrap" TextAlignment="Right" />
                                             </RelativePanel>
                                         </Border>
                                     </Grid>
                                     <RelativePanel HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                                        <CommandBar Name="HoverCommandBar" helpers:AncestorSource.AncestorType="ListView" Visibility="{Binding DataContext.DataContext.IsExtendedView, ElementName=HoverCommandBar, Converter={StaticResource BoolToVisibilityConverter}}" IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
+                                        <CommandBar Name="HoverCommandBar" Visibility="{Binding DataContext.DataContext.IsExtendedView, ElementName=HoverCommandBar, Converter={StaticResource BoolToVisibilityConverter}}" IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
                                             <CommandBar.SecondaryCommands>
                                                 <!-- Added dummy button to enforce showing the icons. without this dummy the Binding for the icon doesn't work-->
-                                                <AppBarButton Label="Edit" Visibility="Visible" x:Name="HoverButtonEdit" Command="{Binding DataContext.DataContext.ShowAccountDialogToEditCommand, ElementName=HoverCommandBar}"  CommandParameter="{x:Bind Id}">
+                                                <AppBarButton Label="Edit" Visibility="Visible" x:Name="HoverButtonEdit" Command="{Binding DataContext.DataContext.ShowAccountDialogToEditCommand, ElementName=proxy}"  CommandParameter="{x:Bind Id}">
                                                     <FontIcon  Glyph="&#xE70B;" FontWeight="Normal"  />
                                                 </AppBarButton>
-                                                <AppBarButton Icon="Delete" Label="Delete" x:Name="HoverButtonDel" Command="{Binding DataContext.DataContext.DeleteAccountCommand, ElementName=HoverCommandBar}" CommandParameter="{x:Bind Id}"/>
+                                                <AppBarButton Icon="Delete" Label="Delete" x:Name="HoverButtonDel" Command="{Binding DataContext.DataContext.DeleteAccountCommand, ElementName=proxy}" CommandParameter="{x:Bind Id}"/>
                                             </CommandBar.SecondaryCommands>
                                         </CommandBar>
                                     </RelativePanel>
