--- a/Controls/AssetTransactionsListViewControl.xaml
+++ b/Controls/AssetTransactionsListViewControl.xaml
@@ -12,6 +12,7 @@
     xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"    
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"    
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:toolkit="using:AK.Toolkit.WinUI3"
     d:DataContext="{d:DesignInstance Type=viewmodels:AssetsViewModel}"
     mc:Ignorable="d">
 
@@ -27,10 +28,11 @@
         <converters:TransactionTypeToVisibilityConverter x:Key="TransactionTypeToVisibilityConverter"/>
         <converters:AddPrefixConverter x:Key="AddPrefixConverter"/>
         <converters:AddSuffixConverter x:Key="AddSuffixConverter"/>
+        <converters:TimeStampConverter x:Key="TimeStampConverter"/>
 
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
-            <Setter Property="MinHeight" Value="70"/>
+            <Setter Property="MinHeight" Value="30"/>
             <Setter Property="Padding" Value="0"/>
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             <Setter Property="VerticalContentAlignment" Value="Stretch"/>
@@ -51,7 +53,7 @@
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="100"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Name="txtType"  Text="Transaction Type" Grid.Column="0" FontWeight="Light" FontSize="18" Margin="20,0,0,0" HorizontalAlignment="Right"/>
+        <TextBlock Name="txtType"  Text="Transaction Type" Grid.Column="0" FontWeight="Light" FontSize="16" Margin="20,0,0,0" HorizontalAlignment="Right"/>
         <TextBlock Name="txtFrom" Text="From" Grid.Column="1" FontWeight="Light" FontSize="18" HorizontalAlignment="Center"/>
         <TextBlock Name="txtTo" Text="To" Grid.Column="2" FontWeight="Light" FontSize="18" HorizontalAlignment="Center" />
         
@@ -61,10 +63,10 @@
         <ListView x:Name="AssetTransactionListView" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" x:FieldModifier="public" ItemsSource="{Binding ListAssetTransactions}" BorderBrush="Transparent" BorderThickness="1"                             
                         IsItemClickEnabled="True" SelectionMode="None" ItemClick="AssetsListView_ItemClick" 
                         ItemContainerStyle="{StaticResource HorizontalSwipe}" ScrollViewer.VerticalScrollBarVisibility="Visible"
-                        CanReorderItems="false" AllowDrop="false" Margin="10,0,10,10"  >
+                        CanReorderItems="false" AllowDrop="false" Margin="10,0,10,10" toolkit:ScrollBarExtensions.KeepVerticalExpanded="{Binding IsScrollBarsExpanded}" >
 
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="models:AssetTransaction" >
+                <DataTemplate x:DataType="models:Transaction" >
                     <UserControl PointerEntered="ListViewItem_PointerEntered" PointerExited="ListViewItem_PointerExited">
                         <Grid >
                             <VisualStateManager.VisualStateGroups>
@@ -99,8 +101,8 @@
                                             <ColumnDefinition Width="0.23*"/>
                                             <ColumnDefinition Width="50"/>
                                         </Grid.ColumnDefinitions>
-                                       
 
+                                        <TextBlock x:Name="proxy" helpers:AncestorSource.AncestorType="ListView" Visibility="Collapsed" />
                                         <Border Grid.Row="0" Grid.Column="0"  Margin="10,0,0,0"  VerticalAlignment="Center">
                                             <RelativePanel>
                                                 <Image Name="ImageDirection" Source="{Binding Details.TransactionDirection, Converter={StaticResource TransactionDirectionConverter}}" Width="28" Height="28"  Margin="0,0,0,0" />
@@ -108,44 +110,44 @@
                                             </Border>
                                         <Border Grid.Row="0" Grid.Column="1"  Margin="5,0,0,0"  VerticalAlignment="Center" >
                                             <StackPanel>
-                                                <TextBlock Name="txtType" Text="{Binding Details.TransactionType, Converter={StaticResource TransactionTypeConverter} }" FontWeight="Bold" FontSize="18" />
-                                                <TextBlock Name="txtTimeStamp" Text="{Binding TimeStamp }" FontWeight="Normal" FontSize="12" />
-                                                <TextBlock Name="txtId" Text="{Binding Id }" FontWeight="Normal" FontSize="12" />
+                                                <TextBlock Name="txtType" Text="{Binding Details.TransactionType, Converter={StaticResource TransactionTypeConverter} }" FontWeight="Bold" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" Margin="0,5,0,0" />
+                                                <TextBlock Name="txtTimeStamp" Text="{Binding TimeStamp, Converter={StaticResource TimeStampConverter} }" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" />
+                                                <TextBlock Name="txtId" Text="{Binding Id }" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="0,0,0,5"/>
                                             </StackPanel>
                                         </Border>
 
                                         <Border Grid.Row="0" Grid.Column="2"  Margin="10,0,0,0"  VerticalAlignment="Center" >
                                             <StackPanel Orientation="Horizontal"  HorizontalAlignment="Right">
-                                                <TextBlock Name="txtQtyA"  Text="{Binding Details.QtyA, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:G7}'}" FontWeight="Normal" FontSize="18"/>
-                                                <TextBlock Name="txtCoinA"  Text="{Binding Details.CoinA}" FontWeight="Normal" FontSize="18" Margin="5,0,0,0"/>
+                                                <TextBlock Name="txtQtyA"  Text="{Binding Details.QtyA, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:G7}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}"/>
+                                                <TextBlock Name="txtCoinA"  Text="{Binding Details.CoinA}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" Margin="5,0,0,0"/>
                                                 <Image Name="ImageA" Source="{Binding Details.ImageUriA, Converter={StaticResource ImageConverter}}" Height="24"  Margin="5,0,0,0" />
                                             </StackPanel>
                                         </Border>
 
                                         <Border Grid.Row="0" Grid.Column="3"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
                                                 <RelativePanel x:Name="PanelFrom" HorizontalAlignment="Right">
-                                                <TextBlock Name="txtValueA"  Text="{Binding Details.ValueA, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="14" Margin="0,-2,0,0"
+                                                <TextBlock Name="txtValueA"  Text="{Binding Details.ValueA, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" Margin="0,-2,0,0"
                                                                RelativePanel.LeftOf="txtPricePrefixA" />
-                                                <TextBlock Name="txtPricePrefixA"  Text="{Binding Details.CoinA, Converter={StaticResource AddPrefixConverter}, ConverterParameter='(1 | = '}" FontWeight="Normal" FontSize="11" Margin="5,0,0,0" 
+                                                <TextBlock Name="txtPricePrefixA"  Text="{Binding Details.CoinA, Converter={StaticResource AddPrefixConverter}, ConverterParameter='(1 | = '}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="5,0,0,0" 
                                                                RelativePanel.LeftOf="txtPriceA"/>
-                                                <TextBlock Name="txtPriceA"  Text="{Binding Details.PriceA, Converter={StaticResource AddSuffixConverter}, ConverterParameter=')|G7'}" FontWeight="Normal" FontSize="11"  Margin="2,0,0,0" 
+                                                <TextBlock Name="txtPriceA"  Text="{Binding Details.PriceA, Converter={StaticResource AddSuffixConverter}, ConverterParameter=')|G7'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
                                                                RelativePanel.AlignRightWithPanel="True"/>
-                                                <TextBlock Name="txtAccountFrom"  Text="{Binding Details.AccountFrom}" FontWeight="Normal" FontSize="11"  Margin="2,0,0,0" 
+                                                <TextBlock Name="txtAccountFrom"  Text="{Binding Details.AccountFrom}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
                                                                RelativePanel.Below="txtPriceA" 
                                                                RelativePanel.AlignRightWithPanel="True"/>
                                                 <StackPanel Orientation="Horizontal" Visibility="{Binding Details.FeeQty, Converter={StaticResource DoubleToVisibilityConverter }}" HorizontalAlignment="Right"
                                                                 RelativePanel.Below="txtAccountFrom"
                                                                 RelativePanel.AlignRightWithPanel="True" >
-                                                    <TextBlock Name="txtQtyFee"  Text="{Binding Details.FeeQty, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Fee: {0:G7}'}" FontWeight="Normal" FontSize="12" />
-                                                    <TextBlock Name="txtCoinFee"  Text="{Binding Details.FeeCoin}" FontWeight="Normal" FontSize="12" Margin="5,0,0,0" />
+                                                    <TextBlock Name="txtQtyFee"  Text="{Binding Details.FeeQty, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Fee: {0:G7}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" />
+                                                    <TextBlock Name="txtCoinFee"  Text="{Binding Details.FeeCoin}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="5,0,0,0" />
                                                     </StackPanel>
                                                 </RelativePanel>
                                             </Border>
 
                                         <Border Grid.Row="0" Grid.Column="5"  Margin="10,0,0,0"  VerticalAlignment="Center">
                                             <StackPanel Orientation="Horizontal" Visibility="{Binding Details.TransactionType, Converter={StaticResource TransactionTypeToVisibilityConverter}}" HorizontalAlignment="Right">
-                                                <TextBlock Name="txtQtyB"  Text="{Binding Details.QtyB, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:G7}'}" FontWeight="Normal" FontSize="18" />
-                                                <TextBlock Name="txtCoinB"  Text="{Binding Details.CoinB}" FontWeight="Normal" FontSize="18" Margin="5,0,0,0" />
+                                                <TextBlock Name="txtQtyB"  Text="{Binding Details.QtyB, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:G7}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" />
+                                                <TextBlock Name="txtCoinB"  Text="{Binding Details.CoinB}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" Margin="5,0,0,0" />
                                                 <Image Name="ImageB" Source="{Binding Details.ImageUriB, Converter={StaticResource ImageConverter}}" Height="24"  Margin="5,0,0,0"/>
                                             </StackPanel>
                                         </Border>
@@ -153,29 +155,29 @@
                                         <Border Grid.Row="0" Grid.Column="6"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
                                             <StackPanel>
                                                 <RelativePanel x:Name="PanelTo" Visibility="{Binding Details.TransactionType, Converter={StaticResource TransactionTypeToVisibilityConverter}}" HorizontalAlignment="Right" >
-                                                    <TextBlock Name="txtValueB"  Text="{Binding Details.ValueB, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="14" Margin="0,-2,0,0"
+                                                    <TextBlock Name="txtValueB"  Text="{Binding Details.ValueB, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" Margin="0,-2,0,0"
                                                                 RelativePanel.LeftOf="txtPricePrefixB" />
-                                                    <TextBlock Name="txtPricePrefixB"  Text="{Binding Details.CoinB, Converter={StaticResource AddPrefixConverter}, ConverterParameter='(1 | = '}" FontWeight="Normal" FontSize="11" Margin="5,0,0,0" 
+                                                    <TextBlock Name="txtPricePrefixB"  Text="{Binding Details.CoinB, Converter={StaticResource AddPrefixConverter}, ConverterParameter='(1 | = '}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="5,0,0,0" 
                                                                 RelativePanel.LeftOf="txtPriceB" />
-                                                    <TextBlock Name="txtPriceB"  Text="{Binding Details.PriceB, Converter={StaticResource AddSuffixConverter}, ConverterParameter=')|G7'}" FontWeight="Normal" FontSize="11"  Margin="2,0,0,0" 
+                                                    <TextBlock Name="txtPriceB"  Text="{Binding Details.PriceB, Converter={StaticResource AddSuffixConverter}, ConverterParameter=')|G7'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
                                                                 RelativePanel.AlignRightWithPanel="True"/>
                                                 </RelativePanel>
-                                                <TextBlock Name="txtAccountTo"  Text="{Binding Details.AccountTo}" FontWeight="Normal" FontSize="11"  Margin="2,0,0,0" HorizontalAlignment="Right" />
+                                                <TextBlock Name="txtAccountTo"  Text="{Binding Details.AccountTo}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" HorizontalAlignment="Right" />
                                             </StackPanel>
                                         </Border>
                                         <RelativePanel Grid.Row="0" Grid.Column="7"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                                            <CommandBar Name="HoverCommandBar" Visibility="Visible" helpers:AncestorSource.AncestorType="ListView" IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
+                                            <CommandBar Name="HoverCommandBar" Visibility="Visible" IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
                                                 <CommandBar.SecondaryCommands>
                                                     <!-- Added dummy button to enforce showing the icons. without this dummy the Binding for the icon doesn't work-->
-                                                    <AppBarButton Label="Edit" Visibility="Visible" x:Name="HoverButtonEdit" Command="{Binding DataContext.DataContext.ShowTransactionDialogToEditCommand, ElementName=HoverCommandBar}"  CommandParameter="{x:Bind Id}">
+                                                    <AppBarButton Label="Edit" Visibility="Visible" x:Name="HoverButtonEdit" Command="{Binding DataContext.DataContext.ShowTransactionDialogToEditCommand, ElementName=proxy}"  CommandParameter="{x:Bind Id}">
                                                         <FontIcon  Glyph="&#xE70B;" FontWeight="Normal"  />
                                                     </AppBarButton>
-                                                    <AppBarButton Icon="Delete" Label="Delete Transaction" x:Name="HoverButtonDel" Visibility="Visible" Command="{Binding DataContext.DataContext.DeleteTransactionCommand, ElementName=HoverCommandBar}" CommandParameter="{x:Bind Id}"/>
+                                                    <AppBarButton Icon="Delete" Label="Delete Transaction" x:Name="HoverButtonDel" Visibility="Visible" Command="{Binding DataContext.DataContext.DeleteTransactionCommand, ElementName=proxy}" CommandParameter="{x:Bind Id}"/>
                                                 </CommandBar.SecondaryCommands>
                                             </CommandBar>
                                         </RelativePanel>
                                         <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
-                                                <TextBlock Name="txtNote"  Text="{Binding Notes}" Visibility="Collapsed" FontWeight="Normal" FontSize="18" TextWrapping="WrapWholeWords" Margin="2,5,0,5" HorizontalAlignment="Left" />
+                                            <TextBlock Name="txtNote"  Text="{Binding Note}" Visibility="Collapsed" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" TextWrapping="WrapWholeWords" Margin="2,0,0,5" HorizontalAlignment="Left" />
                                         </Border>
                                     </Grid>
                                 </Grid>
