--- a/Views/AssetsView.xaml
+++ b/Views/AssetsView.xaml
@@ -34,15 +34,17 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid x:Name="HeaderGrid" CornerRadius="8,8,0,0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,5,10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="125"/>
-                <RowDefinition Height="125"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="110"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <controls:HomePageHeaderImage Grid.Row="0" Grid.RowSpan="2" Height="250" VerticalAlignment="Top"/>
+            <controls:HomePageHeaderImage Grid.Row="0" Grid.RowSpan="3" Height="265" VerticalAlignment="Top"/>
             <RelativePanel Grid.Row="0">
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="{Binding Foreground, ElementName=smallHeaderText, Converter={StaticResource ThemeColorConverter}}" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
-                <TextBlock x:Name="txtAssets" Text="{Binding ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter='Assets (|)' }" Margin="36,10,0,0" Foreground="{Binding Foreground, ElementName=txtAssets, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                
+                <TextBlock x:Uid="Assets_Title" x:Name="txtAssets" Margin="36,10,0,0" Foreground="{Binding Foreground, ElementName=txtAssets, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock Text="{Binding ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" Margin="0,10,0,0" Foreground="{Binding Foreground, ElementName=txtAssets, Converter={StaticResource ThemeColorConverter}}" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" RelativePanel.RightOf="txtAssets" />
                 <!--Grid HorizontalAlignment="Right" Width="{Binding ElementName=HeaderGrid,Path=ActualWidth}" Margin="0,10,0,0"-->
                     <RelativePanel RelativePanel.AlignRightWithPanel="True">
                     <TextBlock x:Name="txtTotalAssetsValue" Text="{Binding TotalAssetsValue, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" Foreground="{Binding Foreground, ElementName=txtTotalAssetsValue, Converter={StaticResource ThemeColorConverter}}" Margin="36,15,20,0" Style="{StaticResource ValueHeaderTextStyle}" />
@@ -50,21 +52,19 @@
                     </RelativePanel>
                 <!--/Grid-->
             </RelativePanel>
-            <TextBlock Grid.Row="1" VerticalAlignment="Bottom" Margin="35,0,20,20"  Style="{StaticResource ScenarioDescriptionTextStyle}"  TextWrapping="Wrap" Text="Assets are the crypto currencies that you have in portfolio at one or more accounts.
-Crypto of your interest need to be added first to the Coin Library. Also one or more accounts need to be configured.
-                       &#x0d;&#x0a;Build up your assets by adding transactions using the 'Add a new Transaction' button at the bottom of this window."  />
+            <TextBlock x:Uid="Assets_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Margin="35,0,20,20"  Style="{StaticResource ScenarioDescriptionTextStyle}"  TextWrapping="Wrap" />
             <Border Grid.Row="2" VerticalAlignment="Stretch">
                 <Grid Name="AssetsContent">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=120|1*}"/>
-                        <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=85|0}"/>
+                        <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=75|0}"/>
                         <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=0.7*|0}"/>
                         <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
                     <controls:AssetsListViewControl x:Name="MyAssetsListViewControl" x:FieldModifier="public" Margin="0,0,0,0" Grid.Row="0"  />
                     <controls:AssetAccountsGridViewControl x:Name="MyAssetAccountsGridViewControl" x:FieldModifier="public" Margin="0,0,0,0" Grid.Row="1" />
                     <controls:AssetTransactionsListViewControl x:Name="MyAssetTransactionsListViewControl" x:FieldModifier="public"  Margin="0,-5,0,0" Grid.Row="2" />
-                    <Button x:Name="AddTransactionButton" Content="Add a new Transaction" Visibility="Visible" HorizontalAlignment="Stretch" Margin="10,10,0,0" Grid.Row="3"
+                    <Button x:Uid="Assets_TransactionButton" Visibility="Visible" HorizontalAlignment="Stretch" Margin="10,10,0,0" Grid.Row="3"
                             Command="{Binding ShowTransactionDialogToAddCommand}"/>
                 </Grid>
             </Border>
